	* Added more specific descriptions for rsync(1) error states.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Added amanctl(8) in 'amanctl/'.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'configure.ac' to allow use of non-category paths for
	include	statements for Qt4.
	* Removed CVS Id tags.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Added a amanctl(8) man page.
2017-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.14.
2017-07-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'bzip2' dependency in 'aman.spec.in'.
2017-07-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.15.
2017-08-08 Fred Gleason <fredg@paravelsystems.com>
	* Added logging to report the snapshot used when setting DB MASTER and
	DB SLAVE states.
2017-08-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.16.
2017-08-24 Fred Gleason <fredg@paravelsystems.com>
	* Changed AM_DEFAULT_REPLICATION_TICK_TIMEOUT to 60000.
2017-08-24 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'ArchiveDirectory=' directive to the [System<n>] sections
	of aman.conf(5).
2017-08-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.17.
2018-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in amand(8) that caused the service to abort at
	startup if local MySQL instance was not yet started.
2018-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.18.
2019-12-17 Fred Gleason <fredg@paravelsystems.com>
	* Removed all CVS-style 'Id$' macros.
2019-12-17 Fred Gleason <fredg@paravelsystems.com>
	* Renamed all classes in the convenience library to begin with
	'AM'.
2020-07-31 Fred Gleason <fredg@paravelsystems.com>
	* Updated the example configuration to use ed25519 keys for ssh(1).
2021-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Ported package to Qt5.
	* Changed the startup system to Systemd.